changed script for ticker and fixed alignment

--- a/css/style.css
+++ b/css/style.css
@@ -126,6 +126,10 @@ hr{
 	color:#FFF;
 }
 
+.blueText{
+	color:#6dcff6;
+}
+
 /* news ticker */
 
 #newsTicker{
@@ -137,6 +141,7 @@ hr{
 	position: absolute;
 	bottom:0px;
 	left:0px;
+	color:#FFF;
 }
 
 /* liScroll styles */
@@ -147,6 +152,7 @@ height: 100%;
 margin: 0; 
 padding: 0;
 overflow: hidden; 
+position:relative;
 }
 .tickercontainer .mask { /* that serves as a mask. so you get a sort of padding both left and right */
 position: relative;
@@ -170,11 +176,41 @@ padding: 0;
 ul.newsticker a {
 white-space: nowrap;
 padding: 0;
-color: #6dcff6;
+color: #FFF;
 } 
 ul.newsticker span {
 margin: 0 10px 0 0;
 } 
+
+.TickerNews{
+		width: 100%;
+		height: 50px;
+		line-height: 50px;
+	}
+	.ti_wrapper{
+		width: 100%;
+		position: relative;
+		overflow: hidden;
+		height: 50px;
+	}
+	.ti_slide{
+		width: 30000px;
+		position: relative;
+		left: 0;
+		top: 0;
+	}
+	.ti_content{
+		width: 8000px;
+		position: relative;
+		float:left;
+	}
+	.ti_news{
+		float:left;
+	}
+	.ti_news a{
+		display: block;
+		margin-right: 10px;
+	}
 
 
 /* rotator */
@@ -234,10 +270,10 @@ margin: 0 10px 0 0;
 
 #slideshow .right {
 	position:absolute;
-  -webkit-transform: rotateX( 90deg ) translateZ( 200px );
-  -moz-transform: rotateX( 90deg ) translateZ( 200px );
-  -o-transform: rotateX( 90deg ) translateZ( 200px );
-  transform: rotateX( 90deg ) translateZ( 200px );
+  -webkit-transform: rotateX( 90deg ) translateZ( 100px );
+  -moz-transform: rotateX( 90deg ) translateZ( 100px );
+  -o-transform: rotateX( 90deg ) translateZ( 100px );
+  transform: rotateX( 90deg ) translateZ( 100px );
   opacity: 0;
   -webkit-transition: -webkit-transform 1s, opacity 1s;
   -moz-transition: -moz-transform 1s, opacity 1s;
@@ -247,10 +283,10 @@ margin: 0 10px 0 0;
 
 #slideshow .left {
 	position:absolute;
-  -webkit-transform: rotateX( -90deg ) translateZ( 200px ) translateY(-360px);
-  -moz-transform: rotateX( -90deg ) translateZ( 200px ) translateY(-360px);
-  -o-transform: rotateX( -90deg ) translateZ( 200px ) translateY(-360px);
-  transform: rotateX( -90deg ) translateZ( 200px ) translateY(-360px);
+  -webkit-transform: rotateX( -90deg ) translateZ( 100px ) translateY(-360px);
+  -moz-transform: rotateX( -90deg ) translateZ( 100px ) translateY(-360px);
+  -o-transform: rotateX( -90deg ) translateZ( 100px ) translateY(-360px);
+  transform: rotateX( -90deg ) translateZ( 100px ) translateY(-360px);
   opacity: 0;
   -webkit-transition: -webkit-transform 1s, opacity 1s;
   -moz-transition: -moz-transform 1s, opacity 1s;
